# NCIT-Hackathon

./: .gitignore  admin.py  app.py  characters.py  main.py  model_chat.py  pyproject.toml  sentiment_engine.py
frontend/src/: app.css  characterArt.js  index.css
frontend/src/components/: LandingPage.jsx
frontend/src/data/: siteConfig.json
