[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=7.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "ngrok>=1.7.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
